luffy/k8s/cluster/dev/gatewayapi/gateway.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: default
  namespace: sunny
spec:
  gatewayClassName: amazon-vpc-lattice
  listeners:
    - name: http
      protocol: HTTP
      port: 80

# --- 

# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: luffy-router
#   namespace: sunny
# spec:
#   parentRefs:
#   - name: luffy-gateway
#   rules:
#   - backendRefs:
#     - name: luffy-service
#       port: 8080

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: checkoutroute
  namespace: sunny
spec:
  parentRefs:
    - name: default
      sectionName: http
  rules:
    - backendRefs:
        - name: luffy-service
          namespace: sunny
          kind: Service
          port: 8080


---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: amazon-vpc-lattice
spec:
  controllerName: application-networking.k8s.aws/gateway-api-controller

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: eks-lattice-network
spec:
  gatewayClassName: amazon-vpc-lattice
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
